--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,7 +1,7 @@
 [preset.0]
 
 name="Windows Desktop"
-platform="Windows Desktop"
+platform="Windows Desktop Baromságok"
 runnable=true
 custom_features=""
 export_filter="all_resources"
